# build_attr_bug

./: README.md  build_0.4.0.out  build_0.4.0_plural.out  build_0.5.0.out  build_0.5.0_plural.out  build_last.out  build_last_plural.out  requirements_build_0.4.0.txt  requirements_build_0.5.0.txt  setup.cfg
