[metadata]
name = build_attr_bug
version = attr: bug.__version__
author = Gianluigi Papia
author_email = gianluigi.papia@protonmail.com
description = Bug with attr: directive since build 0.5.0
long_description_content_type = file: README.md

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
